<resources>
    <string name="app_name">NavTube</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="community">Community</string>
    <string name="play">Play</string>
    <string name="favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="filter">Filter</string>
    <string name="more_option">more option</string>
    <string name="play_video">play video</string>
    <string name="share_to_community">share to community</string>
    <string name="favorite_the_video">favorite the video</string>
    <string name="video_thumbnail">video thumbnail</string>
    <string name="share_description">this ootion let you share the video</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="report_discription">this option for reporting the video in case somthing wrong</string>
    <string name="button_to_start_play_the_list">button to start play the list</string>
    <string name="i_m_feeling_lucky">I\'m feeling lucky</string>
    <string name="look_what_i_found">Look what I found</string>
    <string name="close_layout">close layout</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="search">Search</string>
    <string name="add_labels">Add labels ;)</string>
    <string name="save">save</string>
    <string name="label_name">Label Name</string>
    <string name="cancel">Cancel</string>
    <string name="label">Labels</string>
    <string name="ok">OK</string>
    <string name="search_hint">Search favourites…</string>
    <string name="new_label_or_tag">this button is for creating new label or tag</string>
    <string name="clear_all">clear all</string>
    <string name="delete_all">delete all</string>
    <string name="clear_label">clear label</string>
    <string name="delete_label">delete label</string>
    <string name="rename_label">rename label</string>
    <string name="move_this_video_to_a_different_label">move this video to a different label</string>
    <string name="move">Move</string>
    <string name="selectLabel">Select label</string>
    <string name="no_favorites_found">No Favorites Found</string>
    <string name="no_fav_detailes">Tap on the Heart Button of any video to add it on the favourite list OR DOUBLE TAP on the bubble widget</string>
    <string name="no_results">NO Results Found</string>
    <string name="no_label_make_label">There is No labels Make a Label First</string>
    <string name="loadingVideo">Loading Video list...</string>
    <string name="look_what_I_found">\"Look what I found @NavTube \"</string>
    <string name="share_via">Share via</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="Close">Close</string>
    <string name="no_Internet">There is no Internet Connection</string>
    <string name="NoVideoPleseResfresh">No Videos on the list please Refresh</string>
    <string name="error_connection">an Error has occur, check your connection and try again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish">Finish</string>
    <string name="app_features">App Features slides</string>
    <string name="screen_one_title">Be The Captain 🚢, Explore and Unlock ⚓️ 🏴‍☠️</string>
    <string name="screen_one_text">With NavTube you can break the chain of YouTube algorithm to explore and watch new content that might interest you</string>
    <string name="favor_videos_and_organize_by_labels">Favor videos and organize by labels 🏷</string>
    <string name="sc_title_3">Ues NavBubble to keep watching on YouTube</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="screen_two_text">Use NavTube you can fav your YouTube videos and organize them By creating labels which allows to  update, delete videos by labels and search them</string>
    <string name="screen_three_text">Use the NavBubble to get new videos while watching YouTube with one click :) and double click to favor the video and long press to see the title, thumbnail of the video and to add label to the video</string>
    <string name="error_no_list">Error Couldn\'t load video list</string>
    <string name="no_main_list_detiale">Check your internet connection and pull to refresh</string>


</resources>