<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/remove_relativelayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/bubble_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?android:colorPrimaryDark"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/bubble_buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/Setting_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="6dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/go_to_setting"
                android:foreground="?attr/selectableItemBackground"
                android:scaleType="fitXY"
                android:src="@drawable/ic_outline_settings_24"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/close_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/close_layout"
                android:foreground="?attr/selectableItemBackground"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_close_24"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/bubble_avatar"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/i_m_feeling_lucky"
                android:foreground="?attr/selectableItemBackground"
                android:scaleType="fitXY"

                android:src="@drawable/nav_logo" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>