<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/mainCard">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/video_thumbnail"
        android:scaleType="centerInside"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ImageView.Corner"
        tool:srcCompat="@tools:sample/backgrounds/scenic"
        />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/primaryDarkLessShade"
        android:contentDescription="@string/video_thumbnail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/channelLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/channelThumbnail"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/circle_image"
                android:visibility="gone"
                tool:src="@tools:sample/backgrounds/scenic"
                tool:visibility="visible" />

            <TextView
                android:id="@+id/channelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#F1F8F9"
                tool:text="Morbi aliquam velit" />


        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@id/iconLyout"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="#F1F8F9"
            android:textStyle="bold"
            tool:text="Morbi aliquam velit tellus, sed volutpat lorem fringilla etMorbi aliquam velit tellus, sed volutpat lorem fringilla et" />


        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/iconLyout"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/iconMore"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/more_option"
                android:src="@drawable/ic_card_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                />

            <ImageButton
                android:id="@+id/iconPlay"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/play_video"
                android:src="@drawable/ic_play_circle"
                app:layout_constraintBottom_toTopOf="@id/iconFav"
                app:layout_constraintEnd_toEndOf="parent"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iconMore" />


            <ImageButton
                android:id="@+id/iconFav"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favorite_the_video"
                android:src="@drawable/fav_icon_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:focusable="true"
                android:clickable="true"

                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@+id/iconPlay" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>